--- a/index.html
+++ b/index.html
@@ -4,28 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat Smart</title>
-
-    <!-- aos css cdn link  -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"> -->
-
-    <!-- google fonts cdn link  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
-
-    <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-    <!-- custom css file link  -->
     <link rel="stylesheet" href="index.css">
-
 </head>
+
 <body>
     
 <!-- header section starts  -->
 
 <header>
 
-    <a href="#" class="logo"><img src="images/logo-img.png" alt=""></a>
+    <a href="#" class="logo"><img src="images/logoooo3.jpg" alt=""></a>
 
     <div id="menu-bar" class="fas fa-hamburger"></div>
 
@@ -72,10 +63,16 @@
     <div class="image" data-aos="fade-right"></div>
 
     <div class="content" data-aos="fade-left">
-        <h3>a word about us</h3>
-        <p></p>
-        <p></p>
-        <a href="#"><button class="btn">learn more</button></a>
+        <h3> about us</h3>
+        <p>We are known around the world to offer the best of the best.From food 
+            to the drinks and also customer service we have it top notch.
+            Our customer's are our main priority we are here for you to serve you and make sure you
+            have the value for your money.
+         </p>
+        <p>At Audrey's palace we care about you and your health
+            That is why we have the best chef's that prepare quality food
+            just for you.
+         </p>
     </div>
 
 </section>
@@ -87,10 +84,10 @@
 <h1 class="heading"> our delicious <span>menu</span> </h1>
 
 <ul class="list" data-aos="fade-down">
-    <li class="btn" data-src="images/menu2.jpg">breakfast</li>
-    <li class="btn active" data-src="images/">lunch</li>
+    <li class="btn" data-src="images/breko.jpeg">breakfast</li>
+    <li class="btn active" data-src="images/fries.jpeg">lunch</li>
     <li class="btn" data-src="images/ugali.png">dinner</li>
-    <li class="btn" data-src="images/cake2.png">dessert</li>
+    <li class="btn" data-src="images/Blueberry Lemon Cheesecake Cake.jpeg">dessert</li>
 </ul>
 
 <div class="row" data-aos="fade-right">
@@ -127,7 +124,7 @@
 
 <section class="gallery" id="gallery">
 
-<h1 class="heading"> our food <span>gallery</span> </h1>
+<h1 class="heading">food <span>gallery</span> </h1>
 
 <div class="box-container">
 
@@ -138,27 +135,27 @@
 
     <div class="box" data-aos="fade-up">
         <img src="images/img2.jpg" alt="">
-        <h3>delicious food</h3>
+        <h3>We offer quality</h3>
     </div>
 
     <div class="box" data-aos="fade-up">
         <img src="images/img3.jpg" alt="">
-        <h3>delicious food</h3>
+        <h3>Simply the best</h3>
     </div>
 
     <div class="box" data-aos="fade-up">
         <img src="images/img4.jpg" alt="">
-        <h3>delicious food</h3>
+        <h3>Mouth watering</h3>
     </div>
 
     <div class="box" data-aos="fade-up">
         <img src="images/img5.jpg" alt="">
-        <h3>delicious food</h3>
+        <h3>Healthy</h3>
     </div>
 
     <div class="box" data-aos="fade-up">
         <img src="images/img6.jpg" alt="">
-        <h3>delicious food</h3>
+        <h3>Snacks</h3>
     </div>
 
 </div>
@@ -203,16 +200,7 @@
 <!-- custom js file link  -->
 <script src="index.js"></script>
 
-<!-- initializing aos  -->
 
-<script>
-
-    // AOS.init({
-    //     delay:400,
-    //     duration:1000
-    // })
-
-</script>
 
 </body>
 </html>
